Work on input parsing